@@ -35,6 +35,11 @@ ddetect (0.58) UNRELEASED; urgency=low
     - Update Russian translation. Closes: #221648.
   * André Luís Lopes
     - Update pt_BR (Brazilian Portuguese) translation.
+  * Thiemo Seufer
+    - Add support for mips, mipsel to archdetect.
+    - Remove unused #includes.
+    - Unify code formatting.
+    - Add CFLAGS for warnings and space optimization.
  
  -- Joey Hess <joeyh@debian.org>  Tue, 11 Nov 2003 12:13:52 -0500
 
